# math-interpreter

./: .gitignore  LICENSE  README.md  build.ninja
src/: CMakeLists.txt  ast.c  build.sh  compiler.c  console.c  cstr.c  cstr_math.c  debug.c  defines.h  executor.c  functions.h  interpreter.c  interpreter.cpp  interpreter.h  lexer.c  main.c  main.cpp  number.c  numbers.c  parser.c  point.c  strvec.c  test.c  token_math.c  tokens.c
src/include/: CMakeLists.txt  ast.h  compiler.c  compiler.h  console.c  console.h  cstr.c  cstr.h  cstr_math.h  debug.c  debug.h  defines.c  defines.h  engine.h  executor.h  interpreter.h  ivec.c  ivec.h  lexer.c  lexer.h  num_type.h  number.c  number.h  numbers.h  parser.c  parser.h  point.c  point.h  strvec.c  strvec.h  token_math.h  tokens.h  utils.c  utils.h  vector.c  vector.h
